# stroke-prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb
src/stroke_prediction/: model_dispatcher.py  pipeline.py  predict.py  train_pipeline.py
src/stroke_prediction/config/: best_param.yaml  main.yaml  settings.py
src/stroke_prediction/hyperparam/: hyperparam.py
src/stroke_prediction/models/: stroke_prediction_model_output_v0.0.1.pkl
src/stroke_prediction/processing/: data_manager.py  features.py  validation.py
tests/: conftest.py  test_features.py  test_prediction.py
